# sentinel2-downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
core/: preview.py  sort.py
st2dl/: __main__.py  auth.py  cli.py  exceptions.py  preview.py  product.py
st2dl/download/: preview.py  product.py  search.py
st2dl/geo/: geo_types.py
tests/: test_auth.py  test_cli.py  test_preview.py  test_search.py  test_sort.py
tests/data/: test_search_data.json
