[tool.poetry]
name = "sentinel2-downloader"
version = "0.3.0"
description = ""
authors = ["wwdegroot <wouter.w.de.groot@gmail.com>"]
readme = "README.md"
packages = [{include = "st2dl"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
python-dotenv = "^1.0.0"
orjson = "^3.9.10"
rich = "^13.7.0"
click = "^8.1.7"
msgspec = "^0.18.4"
asyncclick = "^8.1.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.5"
pre-commit = "^3.6.0"
pytest-httpx = "^0.30.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
